Added lecture notes

--- a/lectures.html
+++ b/lectures.html
@@ -68,6 +68,8 @@
     <li></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_16">Lecture 16 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_17">Lecture 17 Slides</a></li>
+    <li>Lecture 18</li>
+    <li>Lecture 19</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -93,6 +95,8 @@
 	<li>Ganesh: <a href="notes/Lecture_14_Notes_Ganesh.tex">tex</a>, <a href="notes/Lecture_14_Notes_Ganesh.pdf">pdf</a></li>
 	<li>Bissell: <a href="notes/Lecture_15_Notes_Bissell.tex">tex</a>, <a href="notes/Lecture_15_Notes_Bissell.pdf">pdf</a></li>
     <li></li>
+	<li>Chan: <a href="notes/Lecture_16_Notes_Chan.tex">tex</a>, <a href="notes/Lecture_16_Notes_Chan.pdf">pdf</a></li>
+	<li>Aden: <a href="notes/Lecture_17_Notes_Aden.tar.gz">md/tex</a>, <a href="notes/Lecture_17_Notes_Aden.pdf">pdf</a></li>
 	<li>(Coming soon...)</li>
 	<li>(Coming soon...)</li>
 </ul>
@@ -117,9 +121,11 @@
     <li></li>
 	<li>Paisley: <a href="notes/Lecture_12_Notes_Paisley.tex">tex</a>, <a href="notes/Lecture_12_Notes_Paisley.pdf">pdf</a></li>
 	<li>Shuyang: <a href="notes/Lecture_13_Notes_ShLi.tex">tex</a>, <a href="notes/Lecture_13_Notes_ShLi.pdf">pdf</a></li>
-	<li>(Coming soon...)</li>
+	<li>(None)</li>
 	<li>Li: <a href="notes/Lecture_15_Notes_Li.tex">tex</a>, <a href="notes/Lecture_15_Notes_Li.pdf">pdf</a></li>
     <li></li>
+	<li>Li: <a href="notes/Lecture_16_Notes_Shev.tex">tex</a>, <a href="notes/Lecture_16_Notes_Shev.pdf">pdf</a></li>
+	<li>Li: <a href="notes/Lecture_17_Notes_Shev.tex">tex</a>, <a href="notes/Lecture_17_Notes_Shev.pdf">pdf</a></li>
 	<li>(Coming soon...)</li>
 	<li>(Coming soon...)</li>
 </ul>
@@ -144,9 +150,11 @@
     <li></li>
 	<li>Li: <a href="notes/Lecture_12_Notes_Li.tex">tex</a>, <a href="notes/Lecture_12_Notes_Li.pdf">pdf</a></li>
 	<li>(None)</li>
-	<li>(Coming soon...)</li>
+	<li>(None)</li>
 	<li>Kuo: <a href="notes/Lecture_15_Notes_Kuo.tex">tex</a>, <a href="notes/Lecture_15_Notes_Kuo.pdf">pdf</a></li>
     <li></li>
+	<li>(Coming soon...)</li>
+	<li>(Coming soon...)</li>
 	<li>(Coming soon...)</li>
 	<li>(Coming soon...)</li>
 </ul>
