--- a/lectures.html
+++ b/lectures.html
@@ -68,7 +68,7 @@
     <li></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_16">Lecture 16 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_17">Lecture 17 Slides</a></li>
-    <li>Lecture 18</li>
+    <li><a href="http://sta250.github.io/Stuff/Lecture_18">Lecture 18 Slides</a></li>
     <li>Lecture 19</li>
 </ul>
 </div>
