Fixed notes typo

--- a/lectures.html
+++ b/lectures.html
@@ -124,8 +124,8 @@
 	<li>(None)</li>
 	<li>Li: <a href="notes/Lecture_15_Notes_Li.tex">tex</a>, <a href="notes/Lecture_15_Notes_Li.pdf">pdf</a></li>
     <li></li>
-	<li>Li: <a href="notes/Lecture_16_Notes_Shev.tex">tex</a>, <a href="notes/Lecture_16_Notes_Shev.pdf">pdf</a></li>
-	<li>Li: <a href="notes/Lecture_17_Notes_Shev.tex">tex</a>, <a href="notes/Lecture_17_Notes_Shev.pdf">pdf</a></li>
+	<li>Shev: <a href="notes/Lecture_16_Notes_Shev.tex">tex</a>, <a href="notes/Lecture_16_Notes_Shev.pdf">pdf</a></li>
+	<li>Shev: <a href="notes/Lecture_17_Notes_Shev.tex">tex</a>, <a href="notes/Lecture_17_Notes_Shev.pdf">pdf</a></li>
 	<li>(Coming soon...)</li>
 	<li>(Coming soon...)</li>
 </ul>
