--- a/lectures.html
+++ b/lectures.html
@@ -97,7 +97,7 @@
     <li></li>
 	<li>Chan: <a href="notes/Lecture_16_Notes_Chan.tex">tex</a>, <a href="notes/Lecture_16_Notes_Chan.pdf">pdf</a></li>
 	<li>Aden: <a href="notes/Lecture_17_Notes_Aden.tar.gz">md/tex</a>, <a href="notes/Lecture_17_Notes_Aden.pdf">pdf</a></li>
-	<li>(Coming soon...)</li>
+	<li>Sonmez: <a href="notes/Lecture_18_Notes_Sonmez.tex">tex</a>, <a href="notes/Lecture_18_Notes_Sonmez.pdf">pdf</a></li>
 	<li>(Coming soon...)</li>
 </ul>
 </div>
@@ -121,7 +121,7 @@
     <li></li>
 	<li>Paisley: <a href="notes/Lecture_12_Notes_Paisley.tex">tex</a>, <a href="notes/Lecture_12_Notes_Paisley.pdf">pdf</a></li>
 	<li>Shuyang: <a href="notes/Lecture_13_Notes_ShLi.tex">tex</a>, <a href="notes/Lecture_13_Notes_ShLi.pdf">pdf</a></li>
-	<li>(None)</li>
+	<li>Tao: <a href="notes/Lecture_14_Notes_Tao.tex">tex</a>, <a href="notes/Lecture_14_Notes_Tao.pdf">pdf</a></li>
 	<li>Li: <a href="notes/Lecture_15_Notes_Li.tex">tex</a>, <a href="notes/Lecture_15_Notes_Li.pdf">pdf</a></li>
     <li></li>
 	<li>Shev: <a href="notes/Lecture_16_Notes_Shev.tex">tex</a>, <a href="notes/Lecture_16_Notes_Shev.pdf">pdf</a></li>
