--- a/lectures.html
+++ b/lectures.html
@@ -65,7 +65,7 @@
     <li><a href="Lecture_13.pdf">Lecture 13</a> <a href="Lecture_13.tex">(tex)</a></li>
     <li>Lecture 14</li>
     <li>Lecture 15</li>
-    <li></li>
+    <li><em>GPU Module</em></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_16">Lecture 16 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_17">Lecture 17 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_18">Lecture 18 Slides</a></li>
