Added lecture 18 notes

--- a/lectures.html
+++ b/lectures.html
@@ -126,7 +126,7 @@
     <li></li>
 	<li>Shev: <a href="notes/Lecture_16_Notes_Shev.tex">tex</a>, <a href="notes/Lecture_16_Notes_Shev.pdf">pdf</a></li>
 	<li>Shev: <a href="notes/Lecture_17_Notes_Shev.tex">tex</a>, <a href="notes/Lecture_17_Notes_Shev.pdf">pdf</a></li>
-	<li>(Coming soon...)</li>
+	<li>Qin: <a href="notes/Lecture_18_Notes_Qin.tex">tex</a>, <a href="notes/Lecture_18_Notes_Qin.pdf">pdf</a></li>
 	<li>(Coming soon...)</li>
 </ul>
 </div>
